--- a/functions/prodadmin/prodadmin.html
+++ b/functions/prodadmin/prodadmin.html
@@ -42,6 +42,7 @@
 
     <script src="js/product_validate.js"></script>
     <script src="js/login_page.js"></script>
+    <script src="js/auth.js"></script>
     <script src="js/home_page.js"></script>
     <script src="js/add_page.js"></script>
     <script src="js/show_page.js"></script>
